chore: Adds profile with configurations and the full-text search for a Postgres as production database
* chore: adds profile with configurations for a Postgres database
* chore: integrates full-text search of Postgres into the LocationService
** Adds a column for search tokens if the database is Postgres.
** Implements and integrates a DAO to use the full-text search with Postgres
and the simple like-search with H2. For Postgres, the special column for
the search is also maintained here.

Refs #96
PR #99
Co-authored-by: Claudio Bianucci <bianucci.c@gmail.com>